- removed last traces of original group

--- a/projects/ngx-ramblers/src/app/assets/styles/legacy.sass
+++ b/projects/ngx-ramblers/src/app/assets/styles/legacy.sass
@@ -70,7 +70,7 @@ audio[controls], canvas, video
 
 
 /* =============================================================================
-   EKWG specific
+   Site specific
    ========================================================================== */
 
 .tooltip-link, .tabs, .tabset, .nav, .carousel, .panel-title a
