--- a/projects/ngx-ramblers/src/app/notifications/committee/templates/committee-notification-details.component.html
+++ b/projects/ngx-ramblers/src/app/notifications/committee/templates/committee-notification-details.component.html
@@ -10,7 +10,7 @@
   </p>
   <p>If you want to download this attachment you can click <a [href]="display.fileUrl(committeeFile)">here</a>,
     alternatively
-    you can view or download it from our EKWG
+    you can view or download it from our {{group?.shortName}}
     <a href="committee">Committee page</a>.
   </p>
 </div>
