--- a/projects/ngx-ramblers/src/app/pages/admin/member-bulk-load/member-bulk-load.component.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/member-bulk-load/member-bulk-load.component.html
@@ -16,7 +16,7 @@
                   <div class="col-sm-9">
                     <ul class="list-arrows">
                       The following data formats are supported:
-                      <li>EKWG member data can be loaded into the site 'in bulk' from the monthly update files that up
+                      <li>{{group?.shortName}} member data can be loaded into the site 'in bulk' from the monthly update files that up
                         until September 2020 were emailed to
                         Membership Secretaries by Ramblers. This data was supplied in CSV format and was zipped. You
                         can tell if it's the right format as it should
