--- a/projects/ngx-ramblers/src/app/pages/admin/system-settings/mailchimp/mailchimp-settings.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/system-settings/mailchimp/mailchimp-settings.html
@@ -311,7 +311,7 @@
         <tab [heading]="'Membership'">
           <div class="img-thumbnail thumbnail-admin-edit">
             <div class="row img-thumbnail thumbnail-2">
-              <div class="thumbnail-heading">Welcome to EKWG</div>
+              <div class="thumbnail-heading">Welcome to {{group?.shortName}}</div>
               <div class="col-sm-12">
                 <div class="form-group">
                   <label for="welcome-campaign">Campaign Master</label>
