--- a/projects/ngx-ramblers/src/app/pages/login/forgot-password-modal/forgot-password-modal.component.html
+++ b/projects/ngx-ramblers/src/app/pages/login/forgot-password-modal/forgot-password-modal.component.html
@@ -21,7 +21,7 @@
             <input [disabled]="notifyTarget.busy" [(ngModel)]="credentialOne"
                    type="text"
                    class="form-control input-sm" id="credential-one" name="credentialOne"
-                   placeholder="Enter the username that was given to you in your original EKWG welcome email or email address">
+                   placeholder="Enter the username that was given to you in your original {{group?.shortName}} welcome email or email address">
           </div>
           <div class="form-group">
             <label for="credential-two">{{credentialTwoLabel}}</label>
