--- a/projects/ngx-ramblers/src/app/pages/login/reset-password-modal/reset-password-modal.component.html
+++ b/projects/ngx-ramblers/src/app/pages/login/reset-password-modal/reset-password-modal.component.html
@@ -1,7 +1,7 @@
 <div [ngClass]="{'busy': notifyTarget.busy}" id="reset-password-dialog" tabindex="-1" role="dialog"
      data-backdrop="false" aria-labelledby="modal-label">
   <div class="modal-header">
-    <h4 class="modal-title">Reset my <em>EKWG</em> password</h4>
+    <h4 class="modal-title">Reset my <em>{{group?.shortName}}</em> password</h4>
     <button (click)="bsModalRef.hide()" type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
   </div>
   <div class="modal-body">
