--- a/projects/ngx-ramblers/src/app/pages/mailing-preferences/mailing-preferences-modal.component.html
+++ b/projects/ngx-ramblers/src/app/pages/mailing-preferences/mailing-preferences-modal.component.html
@@ -1,6 +1,6 @@
 <div class="modal-content">
   <div class="modal-header">
-    <h4 class="modal-title" id="mailing-preferences-modal-title-heading">Your <em>EKWG</em> profile</h4>
+    <h4 class="modal-title" id="mailing-preferences-modal-title-heading">Your <em>{{group?.shortName}}</em> profile</h4>
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
   </div>
   <div *ngIf="member" class="modal-body">
