--- a/projects/ngx-ramblers/src/app/notifications/expenses/templates/approver/expense-notification-approver-second-approval.component.html
+++ b/projects/ngx-ramblers/src/app/notifications/expenses/templates/approver/expense-notification-approver-second-approval.component.html
@@ -1,7 +1,7 @@
 <div style="font-size:12px">
     <p>This email is to notify you as an Expense Approver, that <strong [textContent]="display.expenseClaimLatestEvent(expenseClaim).memberId | memberIdToFullName : members"></strong>
         has just updated <strong [textContent]="(display.expenseClaimCreatedEvent(expenseClaim).memberId | memberIdToFullName : members) + '\'s'" class="nowrap"></strong>
-        EKWG expense claim to a status of <strong [textContent]="display.expenseClaimLatestEvent(expenseClaim).eventType.description"></strong>.
+        {{group?.shortName}} expense claim to a status of <strong [textContent]="display.expenseClaimLatestEvent(expenseClaim).eventType.description"></strong>.
         For reference, the claim was originally created on <span [textContent]="display.expenseClaimCreatedEvent(expenseClaim).date | displayDate" class="nowrap"></span>
         and contains the following <span [textContent]="expenseClaim.expenseItems.length"></span> item(s):
     </p>
