--- a/projects/ngx-ramblers/src/app/notifications/expenses/templates/creator/expense-notification-creator-submitted.component.html
+++ b/projects/ngx-ramblers/src/app/notifications/expenses/templates/creator/expense-notification-creator-submitted.component.html
@@ -1,5 +1,5 @@
 <div style="font-size:12px">
-    <p>This email is just to confirm that the EKWG expense claim you created on <span [textContent]="display.expenseClaimCreatedEvent(expenseClaim).date | displayDate" class="nowrap"></span> with the
+    <p>This email is just to confirm that the {{group?.shortName}} expense claim you created on <span [textContent]="display.expenseClaimCreatedEvent(expenseClaim).date | displayDate" class="nowrap"></span> with the
         <span [textContent]="expenseClaim.expenseItems.length"></span> item(s) listed below has been submitted for approval:
     </p>
     <app-expense-notification-details [expenseClaim]="expenseClaim"></app-expense-notification-details>
