--- a/projects/ngx-ramblers/src/app/notifications/expenses/templates/treasurer/expense-notification-treasurer-paid.component.html
+++ b/projects/ngx-ramblers/src/app/notifications/expenses/templates/treasurer/expense-notification-treasurer-paid.component.html
@@ -1,4 +1,4 @@
 <div style="font-size:12px">
     <p>This email is to notify you that <strong [textContent]="(display.expenseClaimCreatedEvent(expenseClaim).memberId | memberIdToFullName : members) + '\'s'" class="nowrap"></strong>
-        EKWG expense claim is now complete and they have been sent a payment notification informing them that funds will arrive of their bank account within 3 days.
+        {{group?.shortName}} expense claim is now complete and they have been sent a payment notification informing them that funds will arrive of their bank account within 3 days.
 </div>
