--- a/projects/ngx-ramblers/src/app/pages/login/login-modal/login-modal.component.html
+++ b/projects/ngx-ramblers/src/app/pages/login/login-modal/login-modal.component.html
@@ -1,6 +1,6 @@
 <div class="modal-content">
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-title-heading">Login to <em>EKWG</em> site</h4>
+    <h4 class="modal-title" id="modal-title-heading">Login to <em>{{group?.shortName}}</em> site</h4>
     <button type="button" class="close" data-dismiss="modal" (click)="bsModalRef.hide()" aria-hidden="true">&times;
     </button>
   </div>
