--- a/projects/ngx-ramblers/src/app/pages/walks/walk-list/walk-list.component.html
+++ b/projects/ngx-ramblers/src/app/pages/walks/walk-list/walk-list.component.html
@@ -67,7 +67,7 @@
                  tooltip="Click to email {{displayedWalk.walk.displayName}} at {{displayedWalk.walk.contactEmail}}"
                  placement="left"></a>
               <span class="tooltip-link" *ngIf="!allowDetailView()" placement="left"
-                    (click)="login()" tooltip="Click to login as an EKWG member and send an email to {{displayedWalk.walk.displayName}}">
+                    (click)="login()" tooltip="Click to login as an {{group?.shortName}} member and send an email to {{displayedWalk.walk.displayName}}">
                 {{displayedWalk.walk.displayName}}</span></td>
             <td class="d-none d-lg-table-cell" width="11%" id="contactPhone-{{index}}">
               <a *ngIf="allowDetailView()" [href]="'tel:' + displayedWalk.walk.contactPhone"
