--- a/projects/ngx-ramblers/src/app/pages/walks/walk-view/walk-leader.html
+++ b/projects/ngx-ramblers/src/app/pages/walks/walk-view/walk-leader.html
@@ -30,7 +30,7 @@
             </a>
             <span (click)="display.login()" *ngIf="!loggedIn" class="tooltip-link span-margin"
                   trigger="mouseenter"
-                  tooltip="Login as an EKWG member and send an email to {{displayedWalk?.walk?.displayName}}">
+                  tooltip="Login as an {{group?.shortName}} member and send an email to {{displayedWalk?.walk?.displayName}}">
           {{displayedWalk?.walk?.displayName}}</span></div>
         </div>
         <div app-related-link [mediaWidth]="display.relatedLinksMediaWidth" class="col-sm-12">
