--- a/projects/ngx-ramblers/src/app/pages/admin/profile/change-password.component.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/profile/change-password.component.html
@@ -24,8 +24,8 @@
             <form class="form-group">
               <label for="prof-new-password">New Password</label>
               <input [(ngModel)]="enteredMemberCredentials.newPassword" type="password"
-                     autocomplete="nope"
-                     name="newPassword"
+                     autocomplete="off"
+                     name="new-password"
                      class="form-control input-sm" id="prof-new-password" placeholder="Enter new password">
             </form>
           </form>
@@ -33,8 +33,8 @@
             <form class="form-group">
               <label for="prof-new-password-confirm">Confirm New Password</label>
               <input [(ngModel)]="enteredMemberCredentials.newPasswordConfirm" type="password"
-                     autocomplete="nope"
-                     name="newPasswordConfirm"
+                     autocomplete="off"
+                     name="newPassword"
                      class="form-control input-sm" id="prof-new-password-confirm"
                      placeholder="Confirm new password">
             </form>
