--- a/projects/ngx-ramblers/src/app/date-picker/date-picker.component.html
+++ b/projects/ngx-ramblers/src/app/date-picker/date-picker.component.html
@@ -1,5 +1,5 @@
 <div [ngClass]="{'form-inline': label && prependLabel}">
-  <label class="ml-2" *ngIf="label && !prependLabel" [for]="id">{{label}}: </label>
+  <label class="ml-2" *ngIf="label && !prependLabel" [for]="id">{{label}}</label>
   <div class="input-group">
     <div *ngIf="label && prependLabel" class="input-group-prepend">
       <span class="input-group-text" (click)="dp.toggle()" [attr.aria-expanded]="dp.isOpen">{{label}}:</span>
@@ -11,7 +11,7 @@
            [placeholder]="placeholder ||'enter date'"
            #dp="bsDatepicker"
            bsDatepicker
-           [bsConfig]="{  showClearButton: true, clearPosition: 'right', showTodayButton: true, todayPosition: 'center', isAnimated: true, dateInputFormat: 'ddd DD-MMM-YYYY', containerClass: 'theme-ramblers'}"
+           [bsConfig]="{ showClearButton: true, clearPosition: 'right', showTodayButton: true, todayPosition: 'center', isAnimated: true, dateInputFormat: 'ddd DD-MMM-YYYY', containerClass: 'theme-ramblers'}"
            type="text" class="form-control" [ngClass]="size ? 'input-' + size: 'input-sm'"/>
     <div class="input-group-append">
       <span class="input-group-text pointer" (click)="disabled? null:dp.toggle()">
