- Walks now queried consistently in WalkService - This service delegates to WalksLocalService or RamblersWalksAndEventsService depending on group.walkPopulation value - Walk filters and sorting now work consistently regardless of group.walkPopulation value

--- a/projects/ngx-ramblers/src/app/pages/committee/send-notification/committee-send-notification.component.html
+++ b/projects/ngx-ramblers/src/app/pages/committee/send-notification/committee-send-notification.component.html
@@ -323,7 +323,7 @@
                             </span>
                         </span>
                         <span style="font-size: 14px;font-weight: bold">
-                            <span *ngIf="notification.groupEventsFilter.includeContact && groupEvent.contactName">Contact:
+                            <span *ngIf="notification.groupEventsFilter.includeContact && groupEvent.contactName"> • Contact:
                               <a
                                 [href]="'mailto:' + groupEvent.contactEmail">{{groupEvent.contactName || groupEvent.contactEmail}}</a>
                               <span *ngIf="groupEvent.contactPhone"> ({{groupEvent.contactPhone}})</span></span>
