- added WalksPopulationLocalGuard to prevent navigation to pages that are not applicable - create defaults if missing and render mailchimp segment settings correctly - disable editings of walks unless walk population is local - disable certain filters for walks unless walk population is local - further attempt to render google map if config data arrives later then component render

--- a/projects/ngx-ramblers/src/app/pages/admin/system-settings/mailchimp/mailchimp-settings.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/system-settings/mailchimp/mailchimp-settings.html
@@ -60,9 +60,9 @@
               </app-mailchimp-list-settings>
             </div>
             <div *ngIf="mailchimpConfig" class="img-thumbnail thumbnail-2">
-              <div class="thumbnail-heading">Segments ({{segments.length}})</div>
-              <app-mailchimp-segment-editor *ngIf="mailchimpConfig?.segments?.general"
-                [segments]="mailchimpConfig.segments.general"></app-mailchimp-segment-editor>
+              <div class="thumbnail-heading">Mailchimp Segments</div>
+              <app-mailchimp-segment-editor [segments]="mailchimpConfig.segments.general">
+              </app-mailchimp-segment-editor>
             </div>
           </div>
         </tab>
