- fix panel expander styling for ramblers walk - turn off majority of server side logging

--- a/projects/ngx-ramblers/src/app/pages/walks/walk-view/walk-view.html
+++ b/projects/ngx-ramblers/src/app/pages/walks/walk-view/walk-view.html
@@ -92,7 +92,7 @@
           </div>
         </div>
       </div>
-      <div *ngIf="pathContainsMongoId">
+      <div *ngIf="pathContainsWalkId">
         <div *ngIf="notifyTarget.showAlert" class="col-12 alert {{notifyTarget.alertClass}} mt-3">
           <fa-icon [icon]="notifyTarget.alert.icon"></fa-icon>
           <strong class="ml-2">{{notifyTarget.alertTitle}}</strong>
