--- a/projects/ngx-ramblers/src/app/pages/walks/walk-view/walk-view.sass
+++ b/projects/ngx-ramblers/src/app/pages/walks/walk-view/walk-view.sass
@@ -9,4 +9,13 @@
   margin: -9px 0px 15px
 
 .postcode-input
-  width: 97%
+  width: 120px
+  margin-top: -6px
+
+.postcode-input-second-line
+  width: 313px
+  margin-top: 6px
+
+.postcode-label-second-line
+  margin-top: 10px
+
